# NovaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: simple.frag  simple.vert
src/core/: Engine.cpp  Engine.h  EngineConfig.h  main.cpp
src/demo/: demo_game.cpp
src/ecs/: Component.h  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  Coordinator.h  Entity.h  EntityManager.cpp  EntityManager.h  Signature.h  SpriteRenderer.h  System.h  SystemManager.cpp  SystemManager.h  Transform.h
src/renderer/: Shader.cpp  Shader.h  Window.cpp  Window.h
src/systems/: RenderSystem.cpp  RenderSystem.h
